Ensure HealthObserver::periodicCheckImpl() implementations handle exceptions and return an appropriate failing health check status when one occurs

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.12, 6.0.2, 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.0, v5.0
    • 13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The attached build failure occurs due to the FaultManager thread throwing an exception while the server was shutting down. The exception exits a noexcept method, which causes the server to crash. This ticket is to audit the implementations of HealthObserverBase::periodicCheck to ensure that the functions return a failing health check status on exception.

            Assignee:
            Andrew Witten (Inactive)
            Reporter:
            Lamont Nelson
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: