SERVER-67280 wrap periodicCheckImpl with try catch

(cherry picked from commit 3e5d353f846896ea81fca853bc4a03b94fe91df5)